# backend/routes/web.go
@@ -35,6 +35,9 @@ func Web() {
 	facades.Route().Get("/api/extensions", extensionController.Index)
 	facades.Route().Get("/api/extensions/:id", extensionController.Show)
 	facades.Route().Put("/api/extensions/:id", extensionController.Update)
+	facades.Route().Get("/api/modules", extensionController.Modules)
+	facades.Route().Get("/api/plugins", extensionController.Plugins)
+	facades.Route().Put("/api/plugins/:id/state", extensionController.UpdatePlugin)
 	menuController := controllers.NewMenuController(authController)
 	resourceController := controllers.NewConfiguredResourceController(authController)
 	userResourceController := controllers.NewCoreResourceController(authController, resource.NewCoreResourceService(resource.NewMemoryCoreResourceRepository(userresources.Seed()...)), "users")
